# Shader

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
assets/models/Mugs/Models/: Mug_C_glTF.glb  Mug_T_glTF.glb  Mug_dae.dae  Mug_fbx.fbx  Mug_obj.mtl  Mug_stl.stl
assets/models/bottle/: bottle.mtl
assets/shaders/: basic.frag  basic.vert  example.frag  example.vert  light.frag  light.vert
include/: camera.h  context.h  gl_helper.h  model.h  program.h
script/: pack.ps1  pack.sh  release.sh
src/: CMakeLists.txt  camera.cpp  gl_helper.cpp  main.cpp  model.cpp
src/Programs/: basic.cpp  example.cpp  light.cpp
vs2019/: .HW2.vcxproj.swp  HW2.sln  HW2.vcxproj  HW2.vcxproj.filters
